--- a/inventorymanagement/templates/view_sales.html
+++ b/inventorymanagement/templates/view_sales.html
@@ -71,10 +71,10 @@
                                                 Location
                                             </div>
                                             <div class="col-md-2 col-md-2 border-left pt-2">
-                                                <a href="{{ url_for('edit_product') }}">Edit</a>
+                                                <a href="">Edit</a>
                                             </div>
                                             <div class="col-md-2 col-md-2 border-left pt-2">
-                                                    <a href="{{ url_for('add_productmovement') }}">Move</a>
+                                                <a href="">Move</a>
                                             </div>
                                         </div>
                                 </div>
