--- a/inventorymanagement/templates/add_productmovement.html
+++ b/inventorymanagement/templates/add_productmovement.html
@@ -6,10 +6,17 @@
             <div class="col-md-12">
                 <form method="POST" action="">
                 {{ form.hidden_tag() }} <!--CSRF TOKEN -->
-                    <fieldset class="form-group">
+                <fieldset class="form-group">
                         <div class="form-group">
-                            {{ form.name.label(class="form-control-label") }}
-                            {{ form.name(class="form-control form-control-lg") }}
+                            <label class="form-control-label">Product Name</label>
+                            <input name="name" id="name" class="form-control form-control-lg" value="{{ product_name }}">
+                        </div>
+                        <div class="form-group" style="height:100px;overflow: auto;">
+                            {% for index in range(ranges) %}
+                            <div class="form-group">
+                                <input class="form-control form-control-md" value="Quantity at {{ locations[index][0] }} location is {{ quantities[0][index] }}" disabled>
+                            </div>
+                            {% endfor %}
                         </div>
                         <div class="form-group">
                             {{ form.fromLocation.label(class="form-control-label") }}
@@ -27,6 +34,10 @@
                             <label class="form-control-label">Date</label>
                             <input name="timestamp" id="timestamp" class="form-control form-control-lg" value="{{ time }}" disabled>
                         </div>
+                        <div class="form-group">
+                            <label class="form-control-label">Email</label>
+                            <input name="email" id="email" class="form-control form-control-lg" value="{{ email }}" disabled>
+                        </div>
                     </fieldset>
                     <div class="form-group">
                         {{ form.submit(class="btn btn-success") }}
@@ -35,4 +46,10 @@
             </div>
         </div>
     </div>
+    <script>
+        function value(){
+            
+            console.log(conceptName)
+        }
+    </script>
 {% endblock content %}
