--- a/inventorymanagement/templates/edit_productmovement.html
+++ b/inventorymanagement/templates/edit_productmovement.html
@@ -8,27 +8,32 @@
                 {{ form.hidden_tag() }} <!--CSRF TOKEN -->
                     <fieldset class="form-group">
                         <div class="form-group">
-                            {{ form.name.label(class="form-control-label") }}
-                            {{ form.name(class="form-control form-control-lg") }}
+                            <label class="form-control-label">Product Name</label>
+                            <input name="name" id="name" class="form-control form-control-lg" value="{{ product_name[0] }}">
                         </div>
                         <div class="form-group">
-                            {{ form.fromLocation.label(class="form-control-label") }}
-                            {{ form.fromLocation(class="form-control form-control-lg") }}
-                            {{ form.fromLocationId(class="form-control form-control-lg") }}
+                            <label class="form-control-label">From Location</label>
+                            <input name="fromLocation" id="fromLocation" class="form-control form-control-lg" value="">
                         </div>
                         <div class="form-group">
-                            {{ form.toLocation.label(class="form-control-label") }}
-                            {{ form.toLocation(class="form-control form-control-lg") }}
-                            {{ form.toLocationId(class="form-control form-control-lg") }}
+                            <label class="form-control-label">To Location</label>
+                            <input name="toLocation" id="toLocation" class="form-control form-control-lg" value="">
                         </div>
                         <div class="form-group">
-                            {{ form.quantity.label(class="form-control-label") }}
-                            {{ form.quantity(class="form-control form-control-lg") }}
-                            {{ form.timestamp(class="form-control form-control-lg") }}
+                            <label class="form-control-label">Quantity</label>
+                            <input name="quantity" id="quantity" class="form-control form-control-lg" value="">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-control-label">Date</label>
+                            <input name="timestamp" id="timestamp" class="form-control form-control-lg" value="{{ time }}" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-control-label">Email</label>
+                            <input name="email" id="email" class="form-control form-control-lg" value="{{ email }}" disabled>
                         </div>
                     </fieldset>
                     <div class="form-group">
-                        {{ form.submit(class="btn btn-success") }}
+                        <input name="submit" class="btn btn-success" value="Edit">
                     </div>
                 </form>
             </div>
