--- a/inventorymanagement/templates/view_product.html
+++ b/inventorymanagement/templates/view_product.html
@@ -34,19 +34,19 @@
                         <div class="row">
                             <div class="col-md-12 border rounded pt-2" style=" height:50px;">
                                 <div class="row">
-                                    <div class="col-md-2 offset-md-1 pt-2"> 
+                                    <div class="col pt-2"> 
                                         Product Id
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col border-left pt-2">
                                         Name
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col border-left pt-2">
                                         Quantity
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col border-left pt-2">
                                         Edit
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col border-left pt-2">
                                         Move
                                     </div>
                                 </div>
@@ -59,19 +59,19 @@
                             <div class="row">
                                 <div class="col-md-12 border rounded pt-2" style=" height:50px;">
                                     <div class="row">
-                                        <div class="col-md-2 offset-md-1 pt-2"> 
+                                        <div class="col pt-2"> 
                                             {{ product[0] }}
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-left pt-2">
+                                        <div class="col border-left pt-2">
                                             {{ product[1] }}
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-left pt-2">
+                                        <div class="col border-left pt-2">
                                             {{ product[2] }}
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-left pt-2">
+                                        <div class="col border-left pt-2">
                                             <a href="{{ url_for('edit_product', product_id=product[0]) }}">Edit</a>
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-left pt-2">
+                                        <div class="col border-left pt-2">
                                             <a href="{{ url_for('add_productmovement', product_id=product[0]) }}">Move</a>
                                         </div>
                                     </div>
