--- a/inventorymanagement/templates/view_productmovement.html
+++ b/inventorymanagement/templates/view_productmovement.html
@@ -30,19 +30,19 @@
                         <div class="row">
                             <div class="col-md-12 border rounded pt-2" style=" height:50px;">
                                 <div class="row">
-                                    <div class="col-md-2 col-md-2 offset-md-1 border-right pt-2"> 
+                                    <div class="col pt-2"> 
                                         Product Id
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-right pt-2">
+                                    <div class="col border-left pt-2">
                                         Name
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-right pt-2">
+                                    <div class="col border-left pt-2">
                                         Quantity
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-right pt-2">
+                                    <div class="col border-left pt-2">
                                         Location
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col border-left pt-2">
                                         Edit
                                     </div>
                                 </div>
@@ -55,19 +55,19 @@
                             <div class="row">
                                 <div class="col-md-12 border rounded pt-2" style=" height:50px;">
                                     <div class="row">
-                                        <div class="col-md-2 col-md-2 offset-md-1 border-right pt-2"> 
+                                        <div class="col pt-2"> 
                                             Product Id
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-right pt-2">
+                                        <div class="col border-left pt-2">
                                             Name
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-right pt-2">
+                                        <div class="col border-left pt-2">
                                             Quantity
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-right pt-2">
+                                        <div class="col border-left pt-2">
                                             Location
                                         </div>
-                                        <div class="col-md-2 col-md-2 border-left pt-2">
+                                        <div class="col border-left pt-2">
                                             <a href="{{ url_for('edit_productmovement') }}">Edit</a>
                                         </div>
                                     </div>
