--- a/inventorymanagement/templates/view_sales.html
+++ b/inventorymanagement/templates/view_sales.html
@@ -30,22 +30,22 @@
                         <div class="row">
                             <div class="col-md-12 border rounded pt-2" style=" height:50px;">
                                 <div class="row">
-                                    <div class="col-md-2 col-md-2 border-left pt-2"> 
+                                    <div class="col pt-2"> 
                                         Product Id
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col border-left pt-2">
                                         Name
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col border-left pt-2">
                                         Quantity
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col border-left pt-2">
                                         Location
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col border-left pt-2">
                                         Edit
                                     </div>
-                                    <div class="col-md-2 col-md-2 border-left pt-2">
+                                    <div class="col border-left pt-2">
                                         Move
                                     </div>
                                 </div>
@@ -58,22 +58,22 @@
                             <div class="row">
                                 <div class="col-md-12 border rounded pt-2" style=" height:50px;">
                                         <div class="row">
-                                            <div class="col-md-2 col-md-2 border-left pt-2"> 
+                                            <div class="col pt-2"> 
                                                 Product Id
                                             </div>
-                                            <div class="col-md-2 col-md-2 border-left pt-2">
+                                            <div class="col border-left pt-2">
                                                 Name
                                             </div>
-                                            <div class="col-md-2 col-md-2 border-left pt-2">
+                                            <div class="col border-left pt-2">
                                                 Quantity
                                             </div>
-                                            <div class="col-md-2 col-md-2 border-left pt-2">
+                                            <div class="col border-left pt-2">
                                                 Location
                                             </div>
-                                            <div class="col-md-2 col-md-2 border-left pt-2">
+                                            <div class="col border-left pt-2">
                                                 <a href="">Edit</a>
                                             </div>
-                                            <div class="col-md-2 col-md-2 border-left pt-2">
+                                            <div class="col border-left pt-2">
                                                 <a href="">Move</a>
                                             </div>
                                         </div>
