--- a/inventorymanagement/templates/view_product.html
+++ b/inventorymanagement/templates/view_product.html
@@ -44,6 +44,9 @@
                                         Quantity
                                     </div>
                                     <div class="col border-left pt-2">
+                                        View Quantities
+                                        </div>
+                                    <div class="col border-left pt-2">
                                         Edit
                                     </div>
                                     <div class="col border-left pt-2">
@@ -67,6 +70,9 @@
                                         </div>
                                         <div class="col border-left pt-2">
                                             {{ product[2] }}
+                                        </div>
+                                        <div class="col border-left pt-2">
+                                            <a href="{{ url_for('product_info', product_id=product[0]) }}">View Quantities</a>
                                         </div>
                                         <div class="col border-left pt-2">
                                             <a href="{{ url_for('edit_product', product_id=product[0]) }}">Edit</a>
