--- a/inventorymanagement/templates/add_productmovement.html
+++ b/inventorymanagement/templates/add_productmovement.html
@@ -40,7 +40,7 @@
                         </div>
                     </fieldset>
                     <div class="form-group">
-                        {{ form.submit(class="btn btn-success") }}
+                        {{ form.submit(class="btn btn-success navbar-dark bg-dark") }}
                     </div>
                 </form>
             </div>
