--- a/inventorymanagement/templates/edit_product.html
+++ b/inventorymanagement/templates/edit_product.html
@@ -33,7 +33,7 @@
             <div class="col-md-12">
                     <fieldset>
                         <div class="form-group">
-                            <input type="submit" class="btn btn-success" value="Edit Product">
+                            <input type="submit" class="btn btn-success navbar-dark bg-dark" value="Edit Product">
                         </div>
                     </fieldset>
                 </form>
