--- a/inventorymanagement/templates/edit_productmovement.html
+++ b/inventorymanagement/templates/edit_productmovement.html
@@ -33,7 +33,7 @@
                         </div>
                     </fieldset>
                     <div class="form-group">
-                        <input name="submit" class="btn btn-success" value="Edit">
+                        <input name="submit" class="btn btn-success navbar-dark bg-dark" value="Edit">
                     </div>
                 </form>
             </div>
