--- a/inventorymanagement/templates/edit_location.html
+++ b/inventorymanagement/templates/edit_location.html
@@ -13,7 +13,7 @@
                         </div>
                     </fieldset>
                     <div class="form-group">
-                        <input type="submit" class="btn btn-success" value="Edit Location">
+                        <input type="submit" class="btn btn-success navbar-dark bg-dark" value="Edit Location">
                     </div>
                 </form>
             </div>
