--- a/inventorymanagement/templates/home.html
+++ b/inventorymanagement/templates/home.html
@@ -1,99 +1,75 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="col-md-12">
-            <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="border rounded bg-success panel">
-                            <div class="panel-heading">
-                                <br>
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        
-                                    </div>
-                                    <div class="col-md-8 text-right">
-                                        <div class="huge">26</div>
-                                        <div>Total Products</div>
-                                    </div>
-                                </div>
-                                <br>
+        <div class="row">
+            <div class="col-lg-3 col-md-6">
+                <a href="{{ url_for('view_product') }}" style="text-decoration:none; color: white;">
+                <div class="border rounded navbar-dark bg-dark">
+                    <div class="panel-heading">
+                        <br>
+                        <div class="row">
+                            <div class="col-md-8 offset-md-3 text-right">
+                                <div class="huge">{{ products }}</div>
+                                <div>Total Products</div>
+                                <div>View Products</div>
                             </div>
-                            <a href="{{ url_for('view_product') }}" style="text-decoration:none; color:black;">
-                                <div class="panel-footer">
-                                    <span class="pull-left">View Products</span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </a>
                         </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="border rounded bg-success panel">
-                            <div class="panel-heading">
-                                <br>
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        
-                                    </div>
-                                    <div class="col-md-8 text-right">
-                                        <div class="huge">26</div>
-                                        <div>Total Locations</div>
-                                    </div>
-                                </div>
-                                <br>
-                            </div>
-                            <a href="{{ url_for('view_location') }}" style="text-decoration:none; color:black;">
-                                <div class="panel-footer">
-                                    <span class="pull-left">View Locations</span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="border rounded bg-success panel">
-                            <div class="panel-heading">
-                                <br>
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        
-                                    </div>
-                                    <div class="col-md-8 text-right">
-                                        <div class="huge">26</div>
-                                        <div>Total Sales</div>
-                                    </div>
-                                </div>
-                                <br>
-                            </div>
-                            <a href="{{ url_for('view_sales') }}" style="text-decoration:none; color:black;">
-                                <div class="panel-footer">
-                                    <span class="pull-left">View Sales</span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="border rounded bg-success panel">
-                            <div class="panel-heading">
-                                <br>
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        
-                                    </div>
-                                    <div class="col-md-8 text-right">
-                                        <div class="huge">26</div>
-                                        <div>Total Movement</div>
-                                    </div>
-                                </div>
-                                <br>
-                            </div>
-                            <a href="{{ url_for('view_productmovement') }}" style="text-decoration:none; color:black;">
-                                <div class="panel-footer">
-                                    <span class="text-right">Product Movement</span>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </a>
-                        </div>
+                        <br>
                     </div>
                 </div>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <a href="{{ url_for('view_location') }}" style="text-decoration:none; color: white;">
+                <div class="border rounded navbar-dark bg-dark">
+                    <div class="panel-heading">
+                        <br>
+                        <div class="row">
+                            <div class="col-md-8 offset-md-3 text-right">
+                                <div class="huge">{{ locations }}</div>
+                                <div>Total Locations</div>
+                                <div>View Locations</div>
+                            </div>
+                        </div>
+                        <br>
+                    </div>
+                </div>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <a href="{{ url_for('view_sales') }}" style="text-decoration:none; color: white;">
+                <div class="border rounded navbar-dark bg-dark">
+                    <div class="panel-heading">
+                        <br>
+                        <div class="row">
+                            <div class="col-md-8 offset-md-3 text-right">
+                                <div class="huge">{{ sales }}</div>
+                                <div>Total Sales</div>
+                                <div>View Sales</div>
+                            </div>
+                        </div>
+                        <br>
+                    </div>
+                </div>
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <a href="{{ url_for('view_productmovement') }}" style="text-decoration:none; color: white;">
+                <div class="border rounded navbar-dark bg-dark">
+                    <div class="panel-heading">
+                        <br>
+                        <div class="row">
+                            <div class="col-md-8 offset-md-3 text-right">
+                                <div class="huge">{{ movements }}</div>
+                                <div>Total Movement</div>
+                                <div>Product Movement</div>
+                            </div>
+                        </div>
+                        <br>
+                    </div>
+                </div>
+                </a>
+            </div>
+        </div>
     </div>
 {% endblock content %}
