--- a/inventorymanagement/templates/login.html
+++ b/inventorymanagement/templates/login.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="form-check">
                             {{ form.remember(class="form-check-input") }}        
-                            {{ form.remember.label(class="form-check-label") }}        
+                            {{ form.remember.label(class="form-check-label navbar-dark bg-dark") }}        
                         </div>
                     </fieldset>
                     <div class="form-group">
