--- a/inventorymanagement/templates/product_info.html
+++ b/inventorymanagement/templates/product_info.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group">
-                    <a class="btn btn-success" href="{{ url_for('view_product') }}">Back to Products</a>
+                    <a class="btn btn-success navbar-dark bg-dark" href="{{ url_for('view_product') }}">Back to Products</a>
                 </div>
             </div>
         </div>
