--- a/inventorymanagement/templates/view_product.html
+++ b/inventorymanagement/templates/view_product.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="col-md-2 float-right">
                         {% set href = url_for('add_product') %}
-                        <button class="btn btn-success" onclick=" window.location.href='{{ href }}';">Add Product</button>
+                        <button class="btn btn-success navbar-dark bg-dark" onclick=" window.location.href='{{ href }}';">Add Product</button>
                     </div>
                 </div>
             </div>
