--- a/inventorymanagement/templates/view_productmovement.html
+++ b/inventorymanagement/templates/view_productmovement.html
@@ -80,7 +80,7 @@
                                             {{ movements[count][6] }}
                                         </div>
                                         <div class="col border-left pt-2">
-                                            <a href="{{ url_for('edit_productmovement', movement_id=movements[count][0]) }}">Revert</a>
+                                            <a href="{{ url_for('edit_productmovement', productmovement_id=movements[count][0]) }}">Revert</a>
                                         </div>
                                     </div>
                                 </div>
