--- a/inventorymanagement/templates/home.html
+++ b/inventorymanagement/templates/home.html
@@ -37,7 +37,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-6">
-                <a href="{{ url_for('view_sales') }}" style="text-decoration:none; color: white;">
+                <a href="#" style="text-decoration:none; color: white;">
                 <div class="border rounded navbar-dark bg-dark">
                     <div class="panel-heading">
                         <br>
