--- a/inventorymanagement/templates/layout.html
+++ b/inventorymanagement/templates/layout.html
@@ -84,7 +84,14 @@
                 </div>
             </div>
         </div>
-
+        <div class="footer navbar-dark bg-dark" style="position: fixed;left: 0;bottom: 0;width: 100%;color: white;">
+            <div class="row">
+                <div class="col-md-2">
+                    <small class="text-muted">Inventory Management</small>
+                </div>
+            </div>
+        </div>
+              
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="static/js/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="static/js/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
