--- a/inventorymanagement/templates/edit_location.html
+++ b/inventorymanagement/templates/edit_location.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
+    <div class="col-md-6 offset-md-3">
+        <div class="huge">Edit Location</div>        
+    </div>
     <div class="col-md-6 offset-md-3 border pt-2">
         <br>
         <div class="row">
